# graph-licensing-optimization

./: .gitignore  AGENTS.md  Makefile  PLAN_NAPRAWY_ALGORYTMOW.md  README.md  algorithm_comparison.py  analysis_code (1).ipynb  analysis_report.md  analysis_visualizer.py  benchmark.py  errors.md  facebook_explorer.py  main.py  presentation.md  pyproject.toml  ruff.toml  test.md  test.py  test_ant_colony.py  test_dominating_set.py  test_naive.py  test_quick_real_world.py  test_randomized.py  test_randomized_comparison.py  test_real_world_data.py  test_small_graphs.py  test_solution_utils.py  thesis.md  thesis_one_line.md
.github/: copilot-instructions.md
backend/: main.py  pyproject.toml
benchmarks/: run.py  run_benchmark.py
docs/: PGFPLOTS_SNIPPETS.md  REPLICATION.md  THESIS_GUIDE.md  thesis_readiness_report.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
install-tl-20250911/: LICENSE.TL  install-tl
notebooks/: analysis.ipynb  graph.html
results/: .gitkeep  README.md  benchmark_real_finale.csv
scripts/: __init__.py  _common.py  analyze.py  benchmark.py  benchmark_real_world.py  compare.py  download_facebook_data.py  dynamic.py  generate_graph_cache.py  generate_reports.py  graph_visualization.py  remove_comments.py  run_all.py  run_analyze.py  run_benchmark.py  run_compare.py  run_comparison.py  run_dynamic.py  run_single.py  run_solvers.py  run_test.py  run_tune.py  single.py  tune.py  utils.py
src/: __init__.py  dynamic_simulator.py  graph_generator.py  graph_visualizer.py  license_config.py  logger.py  main.py  models.py  mutations.py  solution_builder.py  solution_validator.py  visualize.py
tests/: __init__.py  test_algorithms.py  test_calculate.py  test_fs_csv.py  test_generators.py  test_license_configs_extra.py  test_solvers.py  (+4 more)
(+1009 files in other folders)
