[project]
name = "glopt"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.3",
    "pulp>=3.2.2",
    "hypothesis>=6.0",
    "tqdm>=4.66",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = []
fix = true
