[project]
name = "glopt"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.3",
    "pulp>=3.2.2",
    "hypothesis>=6.0",
    "tqdm>=4.66",
    "pillow>=10.0",
]

[tool.black]
line-length = 220
target-version = ["py313"]

[tool.ruff]
line-length = 220
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
