[project]
name = "glopt"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.3",
    "pulp>=3.2.2",
    "hypothesis>=6.0",
    "tqdm>=4.66",
    "pillow>=10.0",
    "scipy>=1.16.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
analysis = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-posthocs>=0.11.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[tool.black]
line-length = 220
target-version = ["py313"]

[tool.ruff]
line-length = 220
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = [
  "src",
  "scripts",
]
exclude = [
  ".venv",
  "runs",
  "results",
  "data",
  "docs/thesis",
]
